Removes code smells from unit tests to increase readability and maintainability.