@@ -1,17 +1,15 @@
 package com.asentinel.common.orm.converter.entity;
 
-import static org.junit.Assert.assertEquals;
-
-import java.lang.reflect.Field;
-
+import com.asentinel.common.orm.converter.entity.IdToEntityConverterTestCase.TestEntityInt;
+import com.asentinel.common.orm.converter.entity.IdToEntityConverterTestCase.TestEntityIntHolder;
 import org.junit.Test;
 import org.springframework.core.convert.ConverterNotFoundException;
 import org.springframework.core.convert.TypeDescriptor;
 import org.springframework.core.convert.support.DefaultConversionService;
 import org.springframework.util.ReflectionUtils;
 
-import com.asentinel.common.orm.converter.entity.IdToEntityConverterTestCase.TestEntityInt;
-import com.asentinel.common.orm.converter.entity.IdToEntityConverterTestCase.TestEntityIntHolder;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNull;
 
 public class EntityToIdConverterTestCase {
 
@@ -21,15 +19,14 @@ public class EntityToIdConverterTestCase {
 		conversionService.addConverter(c);
 	}
 
-	
 	@Test
 	public void testExactIdTypeMatchInt() {
-		assertEquals(new Integer(10), conversionService.convert(new TestEntityInt(10), int.class));
+		assertEquals(Integer.valueOf(10), conversionService.convert(new TestEntityInt(10), int.class));
 	}
 
 	@Test
 	public void testExactIdTypeMatchIntObject() {
-		assertEquals(new Integer(10), conversionService.convert(new TestEntityInt(10), Integer.class));
+		assertEquals(Integer.valueOf(10), conversionService.convert(new TestEntityInt(10), Integer.class));
 	}
 
 	@Test
@@ -39,21 +36,17 @@ public class EntityToIdConverterTestCase {
 	
 	@Test
 	public void testNullToString() {
-		assertEquals(null, conversionService.convert(null,
-				new TypeDescriptor((Field) ReflectionUtils.findField(TestEntityIntHolder.class, "testEntityInt")),
-				TypeDescriptor.valueOf(String.class))
-		);
+        assertNull(conversionService.convert(null,
+                new TypeDescriptor(ReflectionUtils.findField(TestEntityIntHolder.class, "testEntityInt")),
+                TypeDescriptor.valueOf(String.class)));
 	}
 	
 	@Test
 	public void testNullToInt() {
-		assertEquals(null, conversionService.convert(null,
-				new TypeDescriptor((Field) ReflectionUtils.findField(TestEntityIntHolder.class, "testEntityInt")),
-				TypeDescriptor.valueOf(Integer.class))
-		);
+        assertNull(conversionService.convert(null,
+                new TypeDescriptor(ReflectionUtils.findField(TestEntityIntHolder.class, "testEntityInt")),
+                TypeDescriptor.valueOf(Integer.class)));
 	}
-	
-	
 
 	@Test(expected = ConverterNotFoundException.class)
 	public void testFailure1() {
@@ -64,5 +57,4 @@ public class EntityToIdConverterTestCase {
 	public void testFailure2() {
 		conversionService.convert(new TestEntityInt(10), Number.class);
 	}
-	
 }
