@@ -1,18 +1,5 @@
 package com.asentinel.common.orm.query;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
-
-import java.util.Arrays;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
-
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.junit.Before;
-import org.junit.Test;
-
 import com.asentinel.common.collections.tree.Node;
 import com.asentinel.common.collections.tree.SimpleNode;
 import com.asentinel.common.jdbc.flavors.JdbcFlavor;
@@ -29,10 +16,20 @@ import com.asentinel.common.orm.QueryUtils;
 import com.asentinel.common.orm.RelationType;
 import com.asentinel.common.orm.SimpleEntityDescriptor;
 import com.asentinel.common.orm.query.DefaultSqlFactory.TreeBreakdown;
+import org.junit.Before;
+import org.junit.Test;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
+import java.util.List;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
+
+import static org.junit.Assert.*;
 
 public class SqlFactoryPaginationTestCase {
 	
-	private final static Logger log = LoggerFactory.getLogger(SqlFactoryPaginationTestCase.class);
+	private static final Logger log = LoggerFactory.getLogger(SqlFactoryPaginationTestCase.class);
 	
 	JdbcFlavor jdbcF = new PostgresJdbcFlavor();
 	SqlFactory sqlFactory = new DefaultSqlFactory(jdbcF);
@@ -44,9 +41,9 @@ public class SqlFactoryPaginationTestCase {
 	
 	@Test
 	public void testBreakTreeOnlyAssociations() {
-		Node<EntityDescriptor> node1 = new SimpleNode<EntityDescriptor>(new SimpleEntityDescriptor(Charge.class));
-		Node<EntityDescriptor> node2 = new SimpleNode<EntityDescriptor>(new SimpleEntityDescriptor(BillParentEntity.class));
-		Node<EntityDescriptor> node3 = new SimpleNode<EntityDescriptor>(new SimpleEntityDescriptor(InvoiceParentEntity.class));
+		Node<EntityDescriptor> node1 = new SimpleNode<>(new SimpleEntityDescriptor(Charge.class));
+		Node<EntityDescriptor> node2 = new SimpleNode<>(new SimpleEntityDescriptor(BillParentEntity.class));
+		Node<EntityDescriptor> node3 = new SimpleNode<>(new SimpleEntityDescriptor(InvoiceParentEntity.class));
 		node2.addChild(node3);
 		node1.addChild(node2);
 		
@@ -57,13 +54,13 @@ public class SqlFactoryPaginationTestCase {
 
 	@Test
 	public void testBreakTreeWithCollections1() {
-		Node<EntityDescriptor> node3 = new SimpleNode<EntityDescriptor>(
+		Node<EntityDescriptor> node3 = new SimpleNode<>(
 				new SimpleEntityDescriptor.Builder(Charge.class).parentRelationType(RelationType.MANY_TO_ONE).build()				
 		);
-		Node<EntityDescriptor> node2 = new SimpleNode<EntityDescriptor>(
+		Node<EntityDescriptor> node2 = new SimpleNode<>(
 				new SimpleEntityDescriptor.Builder(BillParentEntity.class).parentRelationType(RelationType.MANY_TO_ONE).build()
 		);
-		Node<EntityDescriptor> node1 = new SimpleNode<EntityDescriptor>(new SimpleEntityDescriptor(InvoiceParentEntity.class));
+		Node<EntityDescriptor> node1 = new SimpleNode<>(new SimpleEntityDescriptor(InvoiceParentEntity.class));
 		node1.addChild(node2);
 		node2.addChild(node3);
 		
@@ -74,13 +71,13 @@ public class SqlFactoryPaginationTestCase {
 
 	@Test
 	public void testBreakTreeWithCollections2() {
-		Node<EntityDescriptor> node3 = new SimpleNode<EntityDescriptor>(
+		Node<EntityDescriptor> node3 = new SimpleNode<>(
 				new ManyToManyEntityDescriptor.Builder(Charge.class, "t0").build()				
 		);
-		Node<EntityDescriptor> node2 = new SimpleNode<EntityDescriptor>(
+		Node<EntityDescriptor> node2 = new SimpleNode<>(
 				new ManyToManyEntityDescriptor.Builder(BillParentEntity.class, "t1").build()
 		);
-		Node<EntityDescriptor> node1 = new SimpleNode<EntityDescriptor>(new SimpleEntityDescriptor(InvoiceParentEntity.class));
+		Node<EntityDescriptor> node1 = new SimpleNode<>(new SimpleEntityDescriptor(InvoiceParentEntity.class));
 		node1.addChild(node2);
 		node2.addChild(node3);
 		
@@ -92,10 +89,10 @@ public class SqlFactoryPaginationTestCase {
 	
 	@Test
 	public void testPaginationOnlyAssociations() {
-		Node<EntityDescriptor> node1 = new SimpleNode<EntityDescriptor>(new SimpleEntityDescriptor(BillParentEntity.class));
-		Node<EntityDescriptor> node2 = new SimpleNode<EntityDescriptor>(new SimpleEntityDescriptor(InvoiceParentEntity.class));
+		Node<EntityDescriptor> node1 = new SimpleNode<>(new SimpleEntityDescriptor(BillParentEntity.class));
+		Node<EntityDescriptor> node2 = new SimpleNode<>(new SimpleEntityDescriptor(InvoiceParentEntity.class));
 		node1.addChild(node2);
-		log.debug("testPaginationOnlyAssociations - Tree:\n" + node1.toStringAsTree());
+		log.debug("testPaginationOnlyAssociations - Tree:\n{}", node1.toStringAsTree());
 		QueryCriteria pagination  = new QueryCriteria.Builder(node1)
 			.mainWhereClause("a=1")
 			.secondaryWhereClause("b=2")
@@ -104,15 +101,15 @@ public class SqlFactoryPaginationTestCase {
 		
 		// main query
 		String q = sqlFactory.buildPaginatedQuery(pagination);
-		log.debug("testPaginationOnlyAssociations - q: " + q);
+		log.debug("testPaginationOnlyAssociations - q: {}", q);
 		
 		Pattern p = Pattern.compile("main\\s+where");
 		Matcher m  = p.matcher(q);
 		assertTrue(m.find());
 		
-		assertTrue(q.indexOf("a=1") >= 0);
-		assertTrue(q.indexOf("b=2") >= 0);
-		assertTrue(q.indexOf("InvoiceId_Order") >= 0);
+		assertTrue(q.contains("a=1"));
+		assertTrue(q.contains("b=2"));
+		assertTrue(q.contains("InvoiceId_Order"));
 		
 		// ensure we add the primary key of the BillParentEntity class to the main order by so that the ordering is
 		// always deterministic
@@ -120,19 +117,18 @@ public class SqlFactoryPaginationTestCase {
 		
 		// count query, we check we only select the primary key of the root entity
 		String qc = sqlFactory.buildCountQuery(pagination);
-		log.debug("testPaginationOnlyAssociations - qc: " + qc);
-		assertTrue(qc.toLowerCase().replace(" ", "").indexOf("selecta0.billidfrom") >= 0);
+		log.debug("testPaginationOnlyAssociations - qc: {}", qc);
+		assertTrue(qc.toLowerCase().replace(" ", "").contains("selecta0.billidfrom"));
 	}
-	
 
 	@Test
 	public void testPaginationWithCollections() {
-		Node<EntityDescriptor> node1 = new SimpleNode<EntityDescriptor>(new SimpleEntityDescriptor(InvoiceParentEntity.class));
-		Node<EntityDescriptor> node2 = new SimpleNode<EntityDescriptor>(
+		Node<EntityDescriptor> node1 = new SimpleNode<>(new SimpleEntityDescriptor(InvoiceParentEntity.class));
+		Node<EntityDescriptor> node2 = new SimpleNode<>(
 			new SimpleEntityDescriptor.Builder(BillParentEntity.class).parentRelationType(RelationType.MANY_TO_ONE).build()
 		);
 		node1.addChild(node2);
-		log.debug("testPaginationWithCollections - Tree:\n" + node1.toStringAsTree());
+		log.debug("testPaginationWithCollections - Tree:\n{}", node1.toStringAsTree());
 		QueryCriteria pagination  = new QueryCriteria.Builder(node1)
 			.mainWhereClause("a=1")
 			.mainOrderByClause("InvoiceNumber_order")
@@ -142,15 +138,15 @@ public class SqlFactoryPaginationTestCase {
 		
 		// main query
 		String q = sqlFactory.buildPaginatedQuery(pagination);
-		log.debug("testPaginationWithCollections - paging q: " + q);
+		log.debug("testPaginationWithCollections - paging q: {}", q);
 		
 		Pattern p = Pattern.compile("main\\s+where");
 		Matcher m  = p.matcher(q);
 		assertFalse(m.find());
 		
-		assertTrue(q.indexOf("a=1") >= 0);
-		assertTrue(q.indexOf("b=2") >= 0);
-		assertTrue(q.indexOf("InvoiceId_Order") >= 0);
+		assertTrue(q.contains("a=1"));
+		assertTrue(q.contains("b=2"));
+		assertTrue(q.contains("InvoiceId_Order"));
 		
 		// ensure we add the primary key of the InvoiceParentEntity class to the main order by so that the ordering is
 		// always deterministic
@@ -160,22 +156,22 @@ public class SqlFactoryPaginationTestCase {
 		// count query, we check we only select the primary key of the root entity and that
 		// we do not join the details - BILL table
 		q = sqlFactory.buildCountQuery(pagination);
-		log.debug("testPaginationWithCollections - count q: " + q);
-		assertFalse(q.toUpperCase().indexOf("BILL") >= 0);
-		assertTrue(q.toLowerCase().replace(" ", "").indexOf("selecta0.invoiceidfrom") >= 0);
+		log.debug("testPaginationWithCollections - count q: {}", q);
+		assertFalse(q.toUpperCase().contains("BILL"));
+		assertTrue(q.toLowerCase().replace(" ", "").contains("selecta0.invoiceidfrom"));
 	}
 	
 	@Test
 	public void testPaginationWithCollections_forceManyAsOne() {
-		Node<EntityDescriptor> node1 = new SimpleNode<EntityDescriptor>(new SimpleEntityDescriptor(InvoiceParentEntity.class));
-		Node<EntityDescriptor> node2 = new SimpleNode<EntityDescriptor>(
+		Node<EntityDescriptor> node1 = new SimpleNode<>(new SimpleEntityDescriptor(InvoiceParentEntity.class));
+		Node<EntityDescriptor> node2 = new SimpleNode<>(
 			new SimpleEntityDescriptor.Builder(BillParentEntity.class)
 				.parentRelationType(RelationType.MANY_TO_ONE)
 				.forceManyAsOneInPaginatedQueries(true)
 				.build()
 		);
 		node1.addChild(node2);
-		log.debug("testPaginationWithCollections_forceManyAsOne - Tree:\n" + node1.toStringAsTree());
+		log.debug("testPaginationWithCollections_forceManyAsOne - Tree:\n{}", node1.toStringAsTree());
 		QueryCriteria pagination  = new QueryCriteria.Builder(node1)
 			.mainWhereClause("a=1")
 			.mainOrderByClause("InvoiceNumber_order")
@@ -185,15 +181,15 @@ public class SqlFactoryPaginationTestCase {
 		
 		// main query
 		String q = sqlFactory.buildPaginatedQuery(pagination);
-		log.debug("testPaginationWithCollections_forceManyAsOne - paging q: " + q);
+		log.debug("testPaginationWithCollections_forceManyAsOne - paging q: {}", q);
 		
 		Pattern p = Pattern.compile("main\\s+where");
 		Matcher m  = p.matcher(q);
 		assertTrue(m.find());
 		
-		assertTrue(q.indexOf("a=1") >= 0);
-		assertTrue(q.indexOf("b=2") >= 0);
-		assertTrue(q.indexOf("InvoiceId_Order") >= 0);
+		assertTrue(q.contains("a=1"));
+		assertTrue(q.contains("b=2"));
+		assertTrue(q.contains("InvoiceId_Order"));
 		
 		// ensure we add the primary key of the InvoiceParentEntity class to the main order by so that the ordering is
 		// always deterministic
@@ -203,19 +199,19 @@ public class SqlFactoryPaginationTestCase {
 		// count query, we check we only select the primary key of the root entity and that
 		// we DO join the details - BILL table
 		q = sqlFactory.buildCountQuery(pagination);
-		log.debug("testPaginationWithCollections_forceManyAsOne - count q: " + q);
-		assertTrue(q.toUpperCase().indexOf("BILL") >= 0);
-		assertTrue(q.toLowerCase().replace(" ", "").indexOf("selecta0.invoiceidfrom") >= 0);
+		log.debug("testPaginationWithCollections_forceManyAsOne - count q: {}", q);
+		assertTrue(q.toUpperCase().contains("BILL"));
+		assertTrue(q.toLowerCase().replace(" ", "").contains("selecta0.invoiceidfrom"));
 	}
 
 	@Test
 	public void testPaginationWithCollectionsGroupBy() {
-		Node<EntityDescriptor> node1 = new SimpleNode<EntityDescriptor>(new SimpleEntityDescriptor(InvoiceParentEntity.class));
-		Node<EntityDescriptor> node2 = new SimpleNode<EntityDescriptor>(
+		Node<EntityDescriptor> node1 = new SimpleNode<>(new SimpleEntityDescriptor(InvoiceParentEntity.class));
+		Node<EntityDescriptor> node2 = new SimpleNode<>(
 			new SimpleEntityDescriptor.Builder(BillParentEntity.class).parentRelationType(RelationType.MANY_TO_ONE).build()
 		);
 		node1.addChild(node2);
-		log.debug("testPaginationWithCollectionsGroupBy - Tree:\n" + node1.toStringAsTree());
+		log.debug("testPaginationWithCollectionsGroupBy - Tree:\n{}", node1.toStringAsTree());
 		QueryCriteria pagination  = new QueryCriteria.Builder(node1)
 			.mainWhereClause("a=1")
 			.secondaryWhereClause("b=2")
@@ -226,16 +222,16 @@ public class SqlFactoryPaginationTestCase {
 		
 		// main query
 		String q = sqlFactory.buildPaginatedQuery(pagination);
-		log.debug("testPaginationWithCollections - paging q: " + q);
+		log.debug("testPaginationWithCollections - paging q: {}", q);
 		
 		Pattern p = Pattern.compile("main\\s+where");
 		Matcher m  = p.matcher(q);
 		assertFalse(m.find());
 		
-		assertTrue(q.indexOf("a=1") >= 0);
-		assertTrue(q.indexOf("b=2") >= 0);
-		assertTrue(q.indexOf("InvoiceId_Order") >= 0);
-		assertTrue(q.indexOf("group by") >= 0);
+		assertTrue(q.contains("a=1"));
+		assertTrue(q.contains("b=2"));
+		assertTrue(q.contains("InvoiceId_Order"));
+		assertTrue(q.contains("group by"));
 		
 		// ensure we add the primary key of the InvoiceParentEntity class to the main order by so that the ordering is
 		// always deterministic
@@ -244,38 +240,36 @@ public class SqlFactoryPaginationTestCase {
 		// count query, we check we only select the primary key of the root entity and that
 		// we do not join the details - BILL table
 		q = sqlFactory.buildCountQuery(pagination);
-		log.debug("testPaginationWithCollectionsGroupBy - count q: " + q);
-		assertTrue(q.toUpperCase().indexOf("BILL") >= 0);
-		assertTrue(q.toLowerCase().replace(" ", "").indexOf("selecta0.invoiceidfrom") >= 0);
+		log.debug("testPaginationWithCollectionsGroupBy - count q: {}", q);
+		assertTrue(q.toUpperCase().contains("BILL"));
+		assertTrue(q.toLowerCase().replace(" ", "").contains("selecta0.invoiceidfrom"));
 	}
 
-	
 	@Test
 	public void testPaginationWithNamedParamsAssociations() {
-		Node<EntityDescriptor> node1 = new SimpleNode<EntityDescriptor>(new SimpleEntityDescriptor(BillParentEntity.class));
-		Node<EntityDescriptor> node2 = new SimpleNode<EntityDescriptor>(new SimpleEntityDescriptor(InvoiceParentEntity.class));
+		Node<EntityDescriptor> node1 = new SimpleNode<>(new SimpleEntityDescriptor(BillParentEntity.class));
+		Node<EntityDescriptor> node2 = new SimpleNode<>(new SimpleEntityDescriptor(InvoiceParentEntity.class));
 		node1.addChild(node2);
-		log.debug("testPaginationWithNamedParamsAssociations - Tree:\n" + node1.toStringAsTree());
+		log.debug("testPaginationWithNamedParamsAssociations - Tree:\n{}", node1.toStringAsTree());
 		QueryCriteria pagination  = new QueryCriteria.Builder(node1)
 			.mainWhereClause("a=1")
 			.mainOrderByClause("InvoiceId_Order")
 			.build();
 		String q = sqlFactory.buildPaginatedQuery(pagination, true);
-		log.debug("testPaginationWithNamedParamsAssociations - q: " + q);
-		assertTrue(q.indexOf("a=1") >= 0);
-		assertTrue(q.indexOf(jdbcF.getSqlTemplates().getPaginationNamedParam1()) >= 0);
-		assertTrue(q.indexOf(jdbcF.getSqlTemplates().getPaginationNamedParam2()) >= 0);
+		log.debug("testPaginationWithNamedParamsAssociations - q: {}", q);
+		assertTrue(q.contains("a=1"));
+		assertTrue(q.contains(jdbcF.getSqlTemplates().getPaginationNamedParam1()));
+		assertTrue(q.contains(jdbcF.getSqlTemplates().getPaginationNamedParam2()));
 	}
 
-	
 	@Test
 	public void testPaginationWithNamedParamsCollections() {
-		Node<EntityDescriptor> node1 = new SimpleNode<EntityDescriptor>(new SimpleEntityDescriptor(InvoiceParentEntity.class));
-		Node<EntityDescriptor> node2 = new SimpleNode<EntityDescriptor>(
+		Node<EntityDescriptor> node1 = new SimpleNode<>(new SimpleEntityDescriptor(InvoiceParentEntity.class));
+		Node<EntityDescriptor> node2 = new SimpleNode<>(
 			new SimpleEntityDescriptor.Builder(BillParentEntity.class).parentRelationType(RelationType.MANY_TO_ONE).build()
 		);
 		node1.addChild(node2);
-		log.debug("testPaginationWithNamedParamsCollections - Tree:\n" + node1.toStringAsTree());
+		log.debug("testPaginationWithNamedParamsCollections - Tree:\n{}", node1.toStringAsTree());
 		QueryCriteria pagination  = new QueryCriteria.Builder(node1)
 			.mainWhereClause("a=1")
 			.mainAdditionalColumns("InvoiceId_Order")
@@ -283,13 +277,12 @@ public class SqlFactoryPaginationTestCase {
 			.useGroupByOnMainQuery(true)
 			.build();
 		String q = sqlFactory.buildPaginatedQuery(pagination, true);
-		log.debug("testPaginationWithNamedParamsCollections - q: " + q);
-		assertTrue(q.indexOf("a=1") >= 0);
-		assertTrue(q.indexOf(jdbcF.getSqlTemplates().getPaginationNamedParam1()) >= 0);
-		assertTrue(q.indexOf(jdbcF.getSqlTemplates().getPaginationNamedParam2()) >= 0);
+		log.debug("testPaginationWithNamedParamsCollections - q: {}", q);
+		assertTrue(q.contains("a=1"));
+		assertTrue(q.contains(jdbcF.getSqlTemplates().getPaginationNamedParam1()));
+		assertTrue(q.contains(jdbcF.getSqlTemplates().getPaginationNamedParam2()));
 	}
-	
-	
+
 	// ------------- join conditions override -----------------
 
 	@Test
@@ -297,15 +290,15 @@ public class SqlFactoryPaginationTestCase {
 		String overrideString = QueryReady.PLACEHOLDER_DEFAULT_JOIN_CONDITION 
 				+ " and " + QueryReady.PLACEHOLDER_PARENT_TABLE_ALIAS + "." + "TestColumn1 = ?"
 				+ " and " + QueryReady.PLACEHOLDER_CHILD_TABLE_ALIAS + "." + "TestColumn2 = ?";
-		Node<EntityDescriptor> node1 = new SimpleNode<EntityDescriptor>(new SimpleEntityDescriptor(BillParentEntity.class));
-		Node<EntityDescriptor> node2 = new SimpleNode<EntityDescriptor>(
+		Node<EntityDescriptor> node1 = new SimpleNode<>(new SimpleEntityDescriptor(BillParentEntity.class));
+		Node<EntityDescriptor> node2 = new SimpleNode<>(
 				new SimpleEntityDescriptor.Builder(InvoiceParentEntity.class)
 					.joinConditionsOverride(overrideString)
 					.joinConditionsOverrideParam(111)
 					.build()
 		);
 		node1.addChild(node2);
-		log.debug("testPaginationOnlyAssociations_joinConditionsOverride - Tree:\n" + node1.toStringAsTree());
+		log.debug("testPaginationOnlyAssociations_joinConditionsOverride - Tree:\n{}", node1.toStringAsTree());
 		QueryCriteria pagination  = new QueryCriteria.Builder(node1)
 			.mainWhereClause("a=1")
 			.secondaryWhereClause("b=2")
@@ -313,7 +306,7 @@ public class SqlFactoryPaginationTestCase {
 			.build();
 		ParameterizedQuery pq = sqlFactory.buildPaginatedParameterizedQuery(pagination);
 		String q = pq.getSql();
-		log.debug("testPaginationOnlyAssociations_joinConditionsOverride - q: " + q);
+		log.debug("testPaginationOnlyAssociations_joinConditionsOverride - q: {}", q);
 		
 		Pattern p = Pattern.compile("main\\s+where");
 		Matcher m  = p.matcher(q);
@@ -323,7 +316,7 @@ public class SqlFactoryPaginationTestCase {
 		assertTrue(q.contains("b=2"));
 		assertTrue(q.contains("InvoiceId_Order"));
 		assertTrue(q.replaceAll(" ", "").contains("a0.InvoiceId=a1.InvoiceIdanda0.TestColumn1=?anda1.TestColumn2=?"));
-		assertEquals(Arrays.asList(111), pq.getMainParameters());
+		assertEquals(List.of(111), pq.getMainParameters());
 		assertTrue(pq.getSecondaryParameters().isEmpty());
 		
 		// ensure we add the primary key of the BillParentEntity class to the main order by so that the ordering is
@@ -332,12 +325,12 @@ public class SqlFactoryPaginationTestCase {
 		
 		ParameterizedQuery pq2 = sqlFactory.buildCountParameterizedQuery(pagination);
 		String q2 = pq2.getSql();
-		log.debug("testPaginationOnlyAssociations_joinConditionsOverride - q2: " + q2);
+		log.debug("testPaginationOnlyAssociations_joinConditionsOverride - q2: {}", q2);
 
 		assertTrue(q2.replaceAll(" ", "").contains("a0.InvoiceId=a1.InvoiceIdanda0.TestColumn1=?anda1.TestColumn2=?"));
-		assertEquals(Arrays.asList(111), pq2.getMainParameters());
+		assertEquals(List.of(111), pq2.getMainParameters());
 		assertTrue(pq2.getSecondaryParameters().isEmpty());
-		assertTrue(q2.toLowerCase().replace(" ", "").indexOf("selecta0.billidfrom") >= 0);
+		assertTrue(q2.toLowerCase().replace(" ", "").contains("selecta0.billidfrom"));
 	}
 	
 	@Test
@@ -345,8 +338,8 @@ public class SqlFactoryPaginationTestCase {
 		String overrideString = QueryReady.PLACEHOLDER_DEFAULT_JOIN_CONDITION 
 				+ " and " + QueryReady.PLACEHOLDER_PARENT_TABLE_ALIAS + "." + "TestColumn1 = ?"
 				+ " and " + QueryReady.PLACEHOLDER_CHILD_TABLE_ALIAS + "." + "TestColumn2 = ?";
-		Node<EntityDescriptor> node1 = new SimpleNode<EntityDescriptor>(new SimpleEntityDescriptor(InvoiceParentEntity.class));
-		Node<EntityDescriptor> node2 = new SimpleNode<EntityDescriptor>(
+		Node<EntityDescriptor> node1 = new SimpleNode<>(new SimpleEntityDescriptor(InvoiceParentEntity.class));
+		Node<EntityDescriptor> node2 = new SimpleNode<>(
 			new SimpleEntityDescriptor.Builder(BillParentEntity.class)
 				.parentRelationType(RelationType.MANY_TO_ONE)
 				.joinConditionsOverride(overrideString)
@@ -354,7 +347,7 @@ public class SqlFactoryPaginationTestCase {
 				.build()
 		);
 		node1.addChild(node2);
-		log.debug("testPaginationWithCollections_joinConditionsOverride - Tree:\n" + node1.toStringAsTree());
+		log.debug("testPaginationWithCollections_joinConditionsOverride - Tree:\n{}", node1.toStringAsTree());
 		QueryCriteria pagination  = new QueryCriteria.Builder(node1)
 			.mainWhereClause("a=1")
 			.mainOrderByClause("InvoiceNumber_order")
@@ -363,18 +356,18 @@ public class SqlFactoryPaginationTestCase {
 			.build();
 		ParameterizedQuery pq = sqlFactory.buildPaginatedParameterizedQuery(pagination);
 		String q = pq.getSql();
-		log.debug("testPaginationWithCollections_joinConditionsOverride - paging q: " + q);
+		log.debug("testPaginationWithCollections_joinConditionsOverride - paging q: {}", q);
 		
 		Pattern p = Pattern.compile("main\\s+where");
 		Matcher m  = p.matcher(q);
 		assertFalse(m.find());
 		
-		assertTrue(q.indexOf("a=1") >= 0);
-		assertTrue(q.indexOf("b=2") >= 0);
-		assertTrue(q.indexOf("InvoiceId_Order") >= 0);
+		assertTrue(q.contains("a=1"));
+		assertTrue(q.contains("b=2"));
+		assertTrue(q.contains("InvoiceId_Order"));
 		assertTrue(q.replaceAll(" ", "").contains("a0_InvoiceId=a1.InvoiceIdanda0.TestColumn1=?anda1.TestColumn2=?"));
 		assertTrue(pq.getMainParameters().isEmpty());
-		assertEquals(Arrays.asList(222), pq.getSecondaryParameters());
+		assertEquals(List.of(222), pq.getSecondaryParameters());
 		
 
 		
@@ -385,21 +378,20 @@ public class SqlFactoryPaginationTestCase {
 		
 		ParameterizedQuery pq2 = sqlFactory.buildCountParameterizedQuery(pagination);
 		String q2 = pq2.getSql();
-		log.debug("testPaginationWithCollections_joinConditionsOverride - count q2: " + q2);
-		assertFalse(q2.toUpperCase().indexOf("BILL") >= 0);
-		assertTrue(q2.toLowerCase().replace(" ", "").indexOf("selecta0.invoiceidfrom") >= 0);
+		log.debug("testPaginationWithCollections_joinConditionsOverride - count q2: {}", q2);
+		assertFalse(q2.toUpperCase().contains("BILL"));
+		assertTrue(q2.toLowerCase().replace(" ", "").contains("selecta0.invoiceidfrom"));
 		assertTrue(pq2.getMainParameters().isEmpty());
 		assertTrue(pq2.getSecondaryParameters().isEmpty());
 	}
-	
 
 	@Test
 	public void testPaginationWithCollections_groupByEnabled_joinConditionsOverride() {
 		String overrideString = QueryReady.PLACEHOLDER_DEFAULT_JOIN_CONDITION 
 				+ " and " + QueryReady.PLACEHOLDER_PARENT_TABLE_ALIAS + "." + "TestColumn1 = ?"
 				+ " and " + QueryReady.PLACEHOLDER_CHILD_TABLE_ALIAS + "." + "TestColumn2 = ?";
-		Node<EntityDescriptor> node1 = new SimpleNode<EntityDescriptor>(new SimpleEntityDescriptor(InvoiceParentEntity.class));
-		Node<EntityDescriptor> node2 = new SimpleNode<EntityDescriptor>(
+		Node<EntityDescriptor> node1 = new SimpleNode<>(new SimpleEntityDescriptor(InvoiceParentEntity.class));
+		Node<EntityDescriptor> node2 = new SimpleNode<>(
 			new SimpleEntityDescriptor.Builder(BillParentEntity.class)
 				.parentRelationType(RelationType.MANY_TO_ONE)
 				.joinConditionsOverride(overrideString)
@@ -407,7 +399,7 @@ public class SqlFactoryPaginationTestCase {
 				.build()
 		);
 		node1.addChild(node2);
-		log.debug("testPaginationWithCollections_groupByEnabled_joinConditionsOverride - Tree:\n" + node1.toStringAsTree());
+		log.debug("testPaginationWithCollections_groupByEnabled_joinConditionsOverride - Tree:\n{}", node1.toStringAsTree());
 		QueryCriteria pagination  = new QueryCriteria.Builder(node1)
 			.mainWhereClause("a=1")
 			.mainOrderByClause("InvoiceNumber_order")
@@ -417,21 +409,19 @@ public class SqlFactoryPaginationTestCase {
 			.build();
 		ParameterizedQuery pq = sqlFactory.buildPaginatedParameterizedQuery(pagination);
 		String q = pq.getSql();
-		log.debug("testPaginationWithCollections_groupByEnabled_joinConditionsOverride - paging q: " + q);
+		log.debug("testPaginationWithCollections_groupByEnabled_joinConditionsOverride - paging q: {}", q);
 		
 		Pattern p = Pattern.compile("main\\s+where");
 		Matcher m  = p.matcher(q);
 		assertFalse(m.find());
 		
-		assertTrue(q.indexOf("a=1") >= 0);
-		assertTrue(q.indexOf("b=2") >= 0);
-		assertTrue(q.indexOf("InvoiceId_Order") >= 0);
+		assertTrue(q.contains("a=1"));
+		assertTrue(q.contains("b=2"));
+		assertTrue(q.contains("InvoiceId_Order"));
 		assertTrue(q.replaceAll(" ", "").contains("a0_InvoiceId=a1.InvoiceIdanda0.TestColumn1=?anda1.TestColumn2=?"));
-		assertEquals(Arrays.asList(222), pq.getMainParameters());
-		assertEquals(Arrays.asList(222), pq.getSecondaryParameters());
-		
+		assertEquals(List.of(222), pq.getMainParameters());
+		assertEquals(List.of(222), pq.getSecondaryParameters());
 
-		
 		// ensure we add the primary key of the InvoiceParentEntity class to the main order by so that the ordering is
 		// always deterministic
 		assertTrue(q.toLowerCase().replace(" ", "").contains("orderbyinvoicenumber_order,a0.invoiceid"));
@@ -439,11 +429,10 @@ public class SqlFactoryPaginationTestCase {
 		
 		ParameterizedQuery pq2 = sqlFactory.buildCountParameterizedQuery(pagination);
 		String q2 = pq2.getSql();
-		log.debug("testPaginationWithCollections_groupByEnabled_joinConditionsOverride - count q2: " + q2);
-		assertTrue(q2.toUpperCase().indexOf("BILL") >= 0);
-		assertTrue(q2.toLowerCase().replace(" ", "").indexOf("selecta0.invoiceidfrom") >= 0);
-		assertEquals(Arrays.asList(222), pq2.getMainParameters());
+		log.debug("testPaginationWithCollections_groupByEnabled_joinConditionsOverride - count q2: {}", q2);
+		assertTrue(q2.toUpperCase().contains("BILL"));
+		assertTrue(q2.toLowerCase().replace(" ", "").contains("selecta0.invoiceidfrom"));
+		assertEquals(List.of(222), pq2.getMainParameters());
 		assertTrue(pq2.getSecondaryParameters().isEmpty());
 	}
-
 }
